ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "12"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "12"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 80
